force-app/main/default/objects/Account/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>