force-app/main/default/objects/Account/fields/Dealer_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_License_Number__c</fullName>
    <label>Dealer License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>