force-app/main/default/objects/Account/fields/Dealership_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Code__c</fullName>
    <description>Unique code for each dealership</description>
    <displayFormat>DLR-{00000}</displayFormat>
    <label>Dealership Code</label>
    <type>AutoNumber</type>
</CustomField>