force-app/main/default/objects/Account/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>