force-app/main/default/objects/Account/fields/Has_Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Support_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales users use this field to indicate to Support which customers have support plans</description>
    <inlineHelpText>Does this customer have a current support plan? Check this box when you sell a support plan to this customer.</inlineHelpText>
    <label>Has Support Plan</label>
    <type>Checkbox</type>
</CustomField>