force-app/main/default/objects/Account/fields/Headquarters_Location__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Location__c</fullName>
    <label>Headquarters Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>