force-app/main/default/objects/Account/fields/Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Name__c</fullName>
    <label>Image Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>