force-app/main/default/objects/Account/fields/Manufacture_Partner__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacture Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Manufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>