force-app/main/default/objects/Account/fields/Manufacturer_Code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Code__c</fullName>
    <displayFormat>MFR-{00000}</displayFormat>
    <label>Manufacturer Code</label>
    <type>AutoNumber</type>
</CustomField>