force-app/main/default/objects/Account/fields/Manufacturing_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Capacity__c</fullName>
    <label>Manufacturing Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>