force-app/main/default/objects/Account/fields/Products_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Products_Manufactured__c</fullName>
    <label>Products Manufactured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Interior Accessories</fullName>
            </value>
            <value>
                <fullName>Exterior Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>