force-app/main/default/objects/Account/fields/Showroom_Location__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Location__c</fullName>
    <label>Showroom Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>