force-app/main/default/objects/Account/fields/Total_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Total_Certificates__c</fullName>
    <label>Total Certificates</label>
    <summaryForeignKey>Certificate__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>