force-app/main/default/objects/Account/fields/Total_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Projects__c</fullName>
    <label>Total Projects</label>
    <summaryForeignKey>Project__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>