force-app/main/default/objects/Account/recordTypes/Customer_account.recordType-meta.xml
<RecordType>
    <fullName>Customer_account</fullName>
    <active>true</active>
    <label>Customer account</label>
</RecordType>