force-app/main/default/objects/Account/recordTypes/Dealerships.recordType-meta.xml
<RecordType>
    <fullName>Dealerships</fullName>
    <active>true</active>
    <label>Dealerships</label>
</RecordType>