force-app/main/default/objects/Account/recordTypes/Manufacturers.recordType-meta.xml
<RecordType>
    <fullName>Manufacturers</fullName>
    <active>true</active>
    <label>Manufacturers</label>
</RecordType>