force-app/main/default/objects/Account/recordTypes/Portfolio_Account.recordType-meta.xml
<RecordType>
    <fullName>Portfolio_Account</fullName>
    <active>true</active>
    <label>Portfolio Account</label>
</RecordType>