force-app/main/default/objects/Account/listViews/AccountsStartsfWithA.listView-meta.xml
<ListView>
    <fullName>AccountsStartsfWithA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>a</value>
    </filters>
    <label>AccountsStartsfWithA</label>
</ListView>